refactor order payment
